2004-02-16  Yusei Tahara  <tahara@timedia.co.jp>

	* src/custom.conf.sample: added configuration file for user mode.
	* src/kahua/config.scm
	(<kahua-custom>): added. and added new internal slot, "user-mode" for
	running user mode. when running under user mode, "user-mode" value
	is a user name.
	(<kahua-config>): change inheritance. now <kahua-config> inherit
	two classes, <kahua-custom> and <singleton-mixin>.
	(kahua-init): change arguments. now "cfile" must need.
	"user" and "skip-check?" are optional keyword arguments.
	when apply "user" argument, load the user's "custom.conf"
	after "kahua.conf".
	* src/kahua-server.in (kahua-server-main):added optional argument
	"-user" for running user mode.
	* src/kahua-spvr.in
	(worker-script): when running under user mode, run kahua-server process
	with "-user" argument.
	(main): added optinal argument "-user" for running user mode.
	* src/kahua-shell.in (main): added optional argument "-user"
	for running user mode.
	* src/kahua-admin.in (spvr-command-processor): added help command list.
	adduser, deluser, lsuser.
	(main): added optional argument "-user" for running user mode.

2004-02-15  Yusei Tahara  <tahara@timedia.co.jp>

	* emacs/kahua.el.in: added the custom group 'kahua' and variables.
	* emacs/kahua-shell.el.in: use custom variables for ssh username
	and hostname. added select worker prompt hook.

2004-02-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/*.kahua: changed tags from symbol to function.
	
2004-02-14  Nobuo Yamashita  <nobsun@sampou.org>
	
	* src/kahua/elem.scm: newly added. It provides html tags implemented
	as functions.
	* src/kahua.scm: added kahua.elem.
	
2004-02-14  Yusei Tahara  <tahara@timedia.co.jp>

	* emacs/kahua-shell.el.in: added remote emacs interface. can use 'run-kahua-shell' like 'run-scheme'.
	* emacs/Makefile.in: added 'kahua-shell.el' make target.
	* src/kahua-shell.in (login-processor): if stdin is not a terminal,
	password prompt is echoed.
